--- a/Motor89.ioc
+++ b/Motor89.ioc
@@ -39,33 +39,50 @@ Mcu.CPN=STM32F407ZGT6
 Mcu.Family=STM32F4
 Mcu.IP0=CAN1
 Mcu.IP1=CAN2
+Mcu.IP10=TIM9
+Mcu.IP11=TIM12
+Mcu.IP12=USART1
+Mcu.IP13=USART2
 Mcu.IP2=DMA
 Mcu.IP3=FREERTOS
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP7=TIM1
+Mcu.IP8=TIM2
+Mcu.IP9=TIM3
+Mcu.IPNb=14
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PF9
-Mcu.Pin1=PF10
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin15=VP_SYS_VS_tim7
-Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PB12
-Mcu.Pin7=PB13
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=16
+Mcu.Pin0=PE6
+Mcu.Pin1=PF9
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PE9
+Mcu.Pin13=PE11
+Mcu.Pin14=PE13
+Mcu.Pin15=PE14
+Mcu.Pin16=PB12
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PB15
+Mcu.Pin2=PF10
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin27=VP_SYS_VS_tim7
+Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA7
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -91,6 +108,8 @@ NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.Signal=S_TIM2_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.Mode=CAN_Activate
@@ -105,12 +124,22 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA7.Signal=S_TIM3_CH2
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.Signal=S_TIM3_CH3
+PB1.Signal=S_TIM3_CH4
 PB12.Mode=CAN_Activate
 PB12.Signal=CAN2_RX
 PB13.Mode=CAN_Activate
 PB13.Signal=CAN2_TX
+PB14.Signal=S_TIM12_CH1
+PB15.Signal=S_TIM12_CH2
+PE11.Signal=S_TIM1_CH2
+PE13.Signal=S_TIM1_CH3
+PE14.Signal=S_TIM1_CH4
+PE6.Signal=S_TIM9_CH2
+PE9.Signal=S_TIM1_CH1
 PF10.Locked=true
 PF10.Signal=GPIO_Output
 PF9.Locked=true
@@ -148,7 +177,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM9_Init-TIM9-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -181,6 +210,57 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
+SH.S_TIM12_CH1.ConfNb=1
+SH.S_TIM12_CH2.0=TIM12_CH2,PWM Generation2 CH2
+SH.S_TIM12_CH2.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
+SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
+SH.S_TIM1_CH4.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
+SH.S_TIM9_CH2.0=TIM9_CH2,PWM Generation2 CH2
+SH.S_TIM9_CH2.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period
+TIM1.Period=840-1
+TIM1.Prescaler=50-1
+TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
+TIM12.Period=840-1
+TIM12.Prescaler=100-1
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
+TIM2.Period=840-1
+TIM2.Prescaler=100-1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,Channel-PWM Generation2 CH2
+TIM3.Period=840-1
+TIM3.Prescaler=100-1
+TIM9.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM9.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period
+TIM9.Period=840-1
+TIM9.Prescaler=50-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
