--- a/Motor89.ioc
+++ b/Motor89.ioc
@@ -10,39 +10,38 @@ CAN1.CalculateTimeBit=1000
 CAN1.CalculateTimeQuantum=71.42857142857143
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler,ABOM
 CAN1.Prescaler=3
-CAN2.BS1=CAN_BS1_9TQ
-CAN2.BS2=CAN_BS2_4TQ
-CAN2.CalculateBaudRate=1000000
-CAN2.CalculateTimeBit=1000
-CAN2.CalculateTimeQuantum=71.42857142857143
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler
-CAN2.Prescaler=3
-Dma.Request0=USART1_RX
+CAN2.CalculateBaudRate=875000
+CAN2.CalculateTimeBit=1142
+CAN2.CalculateTimeQuantum=380.95238095238096
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+Dma.Request0=USART2_RX
 Dma.RequestsNb=1
-Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_RX.0.Instance=DMA2_Stream2
-Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.0.Mode=DMA_NORMAL
-Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.0.Instance=DMA1_Stream5
+Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.0.Mode=DMA_NORMAL
+Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
 FREERTOS.Tasks01=mySendCan,24,128,SendCanTask,Default,NULL,Dynamic,NULL,NULL;myTaskAssign,27,128,TaskAssignTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407ZGT6
 Mcu.Family=STM32F4
 Mcu.IP0=CAN1
 Mcu.IP1=CAN2
-Mcu.IP10=TIM9
-Mcu.IP11=TIM12
-Mcu.IP12=USART1
-Mcu.IP13=USART2
+Mcu.IP10=TIM4
+Mcu.IP11=TIM5
+Mcu.IP12=TIM6
+Mcu.IP13=TIM12
+Mcu.IP14=USART1
+Mcu.IP15=USART2
 Mcu.IP2=DMA
 Mcu.IP3=FREERTOS
 Mcu.IP4=NVIC
@@ -51,51 +50,65 @@ Mcu.IP6=SYS
 Mcu.IP7=TIM1
 Mcu.IP8=TIM2
 Mcu.IP9=TIM3
-Mcu.IPNb=14
+Mcu.IPNb=16
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PE6
-Mcu.Pin1=PF9
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PE9
-Mcu.Pin13=PE11
-Mcu.Pin14=PE13
-Mcu.Pin15=PE14
-Mcu.Pin16=PB12
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PB15
-Mcu.Pin2=PF10
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin27=VP_SYS_VS_tim7
-Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA7
-Mcu.PinsNb=28
+Mcu.Pin0=PH0-OSC_IN
+Mcu.Pin1=PH1-OSC_OUT
+Mcu.Pin10=PB1
+Mcu.Pin11=PF11
+Mcu.Pin12=PF12
+Mcu.Pin13=PF13
+Mcu.Pin14=PF14
+Mcu.Pin15=PF15
+Mcu.Pin16=PE9
+Mcu.Pin17=PE11
+Mcu.Pin18=PE13
+Mcu.Pin19=PE14
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin20=PB12
+Mcu.Pin21=PB13
+Mcu.Pin22=PB14
+Mcu.Pin23=PB15
+Mcu.Pin24=PD12
+Mcu.Pin25=PD13
+Mcu.Pin26=PD14
+Mcu.Pin27=PD15
+Mcu.Pin28=PA9
+Mcu.Pin29=PA10
+Mcu.Pin3=PA1
+Mcu.Pin30=PA13
+Mcu.Pin31=PA14
+Mcu.Pin32=PD0
+Mcu.Pin33=PD1
+Mcu.Pin34=PB3
+Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin36=VP_SYS_VS_tim7
+Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin4=PA2
+Mcu.Pin40=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin5=PA3
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
 MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.CAN1_RX0_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:10\:0\:true\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
@@ -103,19 +116,17 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM6_DAC_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
-NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:9\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA0-WKUP.Signal=S_TIM2_CH1_ETR
-PA1.Signal=S_TIM2_CH2
+PA0-WKUP.Signal=S_TIM5_CH1
+PA1.Signal=S_TIM5_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.Mode=CAN_Activate
-PA11.Signal=CAN1_RX
-PA12.Mode=CAN_Activate
-PA12.Signal=CAN1_TX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -124,6 +135,8 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.Signal=S_TIM2_CH1_ETR
+PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -135,15 +148,48 @@ PB13.Mode=CAN_Activate
 PB13.Signal=CAN2_TX
 PB14.Signal=S_TIM12_CH1
 PB15.Signal=S_TIM12_CH2
+PB3.Signal=S_TIM2_CH2
+PD0.Locked=true
+PD0.Mode=CAN_Activate
+PD0.Signal=CAN1_RX
+PD1.Locked=true
+PD1.Mode=CAN_Activate
+PD1.Signal=CAN1_TX
+PD12.Signal=S_TIM4_CH1
+PD13.Signal=S_TIM4_CH2
+PD14.Signal=S_TIM4_CH3
+PD15.Signal=S_TIM4_CH4
 PE11.Signal=S_TIM1_CH2
 PE13.Signal=S_TIM1_CH3
 PE14.Signal=S_TIM1_CH4
-PE6.Signal=S_TIM9_CH2
 PE9.Signal=S_TIM1_CH1
-PF10.Locked=true
-PF10.Signal=GPIO_Output
-PF9.Locked=true
-PF9.Signal=GPIO_Output
+PF11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PF11.GPIO_Label=MOTOR_SWITCH_LEFT_UP
+PF11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PF11.GPIO_PuPd=GPIO_PULLUP
+PF11.Locked=true
+PF11.Signal=GPXTI11
+PF12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PF12.GPIO_Label=MOTOR_SWITCH_LEFT_DOWN
+PF12.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PF12.GPIO_PuPd=GPIO_PULLUP
+PF12.Locked=true
+PF12.Signal=GPXTI12
+PF13.GPIOParameters=GPIO_PuPd
+PF13.GPIO_PuPd=GPIO_PULLUP
+PF13.Locked=true
+PF13.Signal=GPIO_Output
+PF14.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PF14.GPIO_Label=MOTOR_SWITCH_RIGHT_DOWN
+PF14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PF14.GPIO_PuPd=GPIO_PULLUP
+PF14.Locked=true
+PF14.Signal=GPXTI14
+PF15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PF15.GPIO_Label=MOTOR_SWITCH_RIGHT_UP
+PF15.GPIO_PuPd=GPIO_PULLUP
+PF15.Locked=true
+PF15.Signal=GPXTI15
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -177,7 +223,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM9_Init-TIM9-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true,14-MX_CAN2_Init-CAN2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -187,6 +233,7 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB2Freq_Value=84000000
 RCC.APB2TimFreq_Value=168000000
 RCC.CortexFreq_Value=168000000
+RCC.EnbaleCSS=true
 RCC.EthernetFreq_Value=168000000
 RCC.FCLKCortexFreq_Value=168000000
 RCC.FamilyName=M
@@ -194,14 +241,15 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
-RCC.PLLM=8
+RCC.PLLM=4
 RCC.PLLN=168
 RCC.PLLQCLKFreq_Value=84000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=168000000
@@ -210,6 +258,14 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
 SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
 SH.S_TIM12_CH1.ConfNb=1
 SH.S_TIM12_CH2.0=TIM12_CH2,PWM Generation2 CH2
@@ -222,45 +278,69 @@ SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
 SH.S_TIM1_CH4.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
 SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
-SH.S_TIM9_CH2.0=TIM9_CH2,PWM Generation2 CH2
-SH.S_TIM9_CH2.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
+SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.ConfNb=1
+SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
+SH.S_TIM4_CH3.ConfNb=1
+SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
+SH.S_TIM4_CH4.ConfNb=1
+SH.S_TIM5_CH1.0=TIM5_CH1,Encoder_Interface
+SH.S_TIM5_CH1.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,Encoder_Interface
+SH.S_TIM5_CH2.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period
-TIM1.Period=840-1
-TIM1.Prescaler=50-1
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,AutoReloadPreload
+TIM1.Period=8000-1
+TIM1.Prescaler=21-1
 TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
-TIM12.Period=840-1
-TIM12.Prescaler=100-1
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
-TIM2.Period=840-1
-TIM2.Prescaler=100-1
+TIM12.Period=1680-1
+TIM12.Prescaler=1000-1
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=EncoderMode
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,Channel-PWM Generation2 CH2
-TIM3.Period=840-1
-TIM3.Prescaler=100-1
-TIM9.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM9.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period
-TIM9.Period=840-1
-TIM9.Prescaler=50-1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,OCPolarity_2,OCPolarity_1,OCPolarity_3,OCPolarity_4
+TIM3.OCPolarity_1=TIM_OCPOLARITY_HIGH
+TIM3.OCPolarity_2=TIM_OCPOLARITY_HIGH
+TIM3.OCPolarity_3=TIM_OCPOLARITY_HIGH
+TIM3.OCPolarity_4=TIM_OCPOLARITY_HIGH
+TIM3.Period=100-1
+TIM3.Prescaler=420-1
+TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,OCPolarity_1,OCPolarity_2,OCPolarity_3,OCPolarity_4
+TIM4.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM4.OCPolarity_2=TIM_OCPOLARITY_LOW
+TIM4.OCPolarity_3=TIM_OCPOLARITY_LOW
+TIM4.OCPolarity_4=TIM_OCPOLARITY_LOW
+TIM4.Period=100-1
+TIM4.Prescaler=420-1
+TIM5.EncoderMode=TIM_ENCODERMODE_TI12
+TIM5.IPParameters=EncoderMode
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
@@ -269,5 +349,13 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
