--- a/Motor89.ioc
+++ b/Motor89.ioc
@@ -89,12 +89,13 @@ Mcu.Pin38=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin39=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PA2
 Mcu.Pin40=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM12_VS_ClockSourceINT
 Mcu.Pin5=PA3
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=41
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -312,7 +313,9 @@ TIM1.Period=8000-1
 TIM1.Prescaler=21-1
 TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,OCPolarity_2,OCPolarity_1
+TIM12.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM12.OCPolarity_2=TIM_OCPOLARITY_LOW
 TIM12.Period=1680-1
 TIM12.Prescaler=1000-1
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
@@ -349,6 +352,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_TIM12_VS_ClockSourceINT.Mode=Internal
+VP_TIM12_VS_ClockSourceINT.Signal=TIM12_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
